--- a/src/scss/components/form-control/_mixins.scss
+++ b/src/scss/components/form-control/_mixins.scss
@@ -1,9 +1,5 @@
-/*
-========================================
-Sizing */
-
-@mixin form-control-sizing-mixin($props) {
-  @each $name, $value in $props {
-    #{$name}: #{$value};
-  }
-}
+// @mixin form-control-sizing-mixin($props) {
+//   @each $name, $value in $props {
+//     #{$name}: #{$value};
+//   }
+// }
