--- a/src/scss/components/form-control/_sizing.scss
+++ b/src/scss/components/form-control/_sizing.scss
@@ -1,27 +1,27 @@
-$form-control-sizing-map: (
-  "": (
-    "height": $form-control-height,
-    "font-size": $form-control-font-size,
-    "padding": $form-control-padding-y $form-control-padding-x,
-  ),
-  "xs": (
-    "height": $form-control-xs-height,
-    "font-size": $form-control-xs-font-size,
-    "padding": $form-control-xs-padding-y $form-control-xs-padding-x,
-  ),
-  "sm": (
-    "height": $form-control-sm-height,
-    "font-size": $form-control-sm-font-size,
-    "padding": $form-control-sm-padding-y $form-control-sm-padding-x,
-  ),
-  "md": (
-    "height": $form-control-md-height,
-    "font-size": $form-control-md-font-size,
-    "padding": $form-control-md-padding-y $form-control-md-padding-x,
-  ),
-  "lg": (
-    "height": $form-control-lg-height,
-    "font-size": $form-control-lg-font-size,
-    "padding": $form-control-lg-padding-y $form-control-lg-padding-x,
-  ),
-);
+// $form-control-sizing-map: (
+//   "": (
+//     "height": $form-control-height,
+//     "font-size": $form-control-font-size,
+//     "padding": $form-control-padding-y $form-control-padding-x,
+//   ),
+//   "xs": (
+//     "height": $form-control-xs-height,
+//     "font-size": $form-control-xs-font-size,
+//     "padding": $form-control-xs-padding-y $form-control-xs-padding-x,
+//   ),
+//   "sm": (
+//     "height": $form-control-sm-height,
+//     "font-size": $form-control-sm-font-size,
+//     "padding": $form-control-sm-padding-y $form-control-sm-padding-x,
+//   ),
+//   "md": (
+//     "height": $form-control-md-height,
+//     "font-size": $form-control-md-font-size,
+//     "padding": $form-control-md-padding-y $form-control-md-padding-x,
+//   ),
+//   "lg": (
+//     "height": $form-control-lg-height,
+//     "font-size": $form-control-lg-font-size,
+//     "padding": $form-control-lg-padding-y $form-control-lg-padding-x,
+//   ),
+// );
