--- a/src/scss/components/icon/_base.scss
+++ b/src/scss/components/icon/_base.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 .icon {
   display: inline-flex;
   position: relative;
@@ -10,11 +12,10 @@
 // Size
 
 @each $name, $props in $icon-sizes {
-
-  $size: map-get($props, "size");
+  $size: map.get($props, "size");
 
   .icon-size-#{$name} {
     @include map-props-mixin(
-      map-get($component-size-sizing, $size));
+      map.get($component-size-sizing, $size));
   }
 }
