--- a/src/scss/components/menu/_base.scss
+++ b/src/scss/components/menu/_base.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 .menu {
   background-color: $menu-bg;
   box-sizing: border-box;
@@ -10,7 +12,7 @@
 @each $width in $menu-widths {
   .menu-width-#{$width} {
     @include map-props-mixin(
-      map-get($component-width-sizing, $width));
+      map.get($component-width-sizing, $width));
   }
 }
 
@@ -27,31 +29,25 @@
 
 @each $size, $props in $menu-title-sizes {
   .menu-title-size-#{$size} {
-
-    $font-size     : map-get($props, "font-size");
-    $gap           : map-get($props, "gap");
-    $height        : map-get($props, "height");
-    $margin-y      : map-get($props, "margin-y");
-    $padding-left  : map-get($props, "padding-left");
-    $padding-right : map-get($props, "padding-right");
-
-    @include map-props-mixin(
-      map-get($component-font-sizing, $font-size));
+    $font-size: map.get($props, "font-size");
+    $gap: map.get($props, "gap");
+    $height: map.get($props, "height");
+    $margin-y: map.get($props, "margin-y");
+    $padding-left: map.get($props, "padding-left");
+    $padding-right: map.get($props, "padding-right");
 
     @include map-props-mixin(
-      map-get($component-gap-sizing, $gap));
-
+      map.get($component-font-sizing, $font-size));
     @include map-props-mixin(
-      map-get($component-height-sizing, $height));
-
+      map.get($component-gap-sizing, $gap));
     @include map-props-mixin(
-      map-get($component-margin-y-sizing, $margin-y));
-
+      map.get($component-height-sizing, $height));
     @include map-props-mixin(
-      map-get($component-padding-left-sizing, $padding-left));
-
+      map.get($component-margin-y-sizing, $margin-y));
     @include map-props-mixin(
-      map-get($component-padding-right-sizing, $padding-right));
+      map.get($component-padding-left-sizing, $padding-left));
+    @include map-props-mixin(
+      map.get($component-padding-right-sizing, $padding-right));
   }
 }
 
@@ -61,18 +57,22 @@
   align-items: center;
   cursor: pointer;
   display: inline-flex;
-  transition: background $menu-item-transition-duration, box-shadow $menu-item-transition-duration, color $menu-item-transition-duration;
+  transition: all $menu-item-transition-duration;
 }
 
 // --Menu item -- Color
 
 @each $color in $component-colors {
-  @each $type in $menu-item-types {
+  .menu-item-color-#{$color} {
+    @include component-color-mixin($color);
+  }
+}
 
-    .menu-item-#{$color}-#{$type} {
-      @include menu-item-pattern-mixin($color, $type);
-    }
+// --Menu item -- Patern
 
+@each $pattern in $menu-item-patterns {
+  .menu-item-pattern-#{$pattern} {
+    @include menu-item-pattern-mixin($pattern);
   }
 }
 
@@ -80,31 +80,25 @@
 
 @each $size, $props in $menu-item-sizes {
   .menu-item-size-#{$size} {
-
-    $font-size     : map-get($props, "font-size");
-    $gap           : map-get($props, "gap");
-    $height        : map-get($props, "height");
-    $margin-y      : map-get($props, "margin-y");
-    $padding-left  : map-get($props, "padding-left");
-    $padding-right : map-get($props, "padding-right");
-
-    @include map-props-mixin(
-      map-get($component-font-sizing, $font-size));
+    $font-size: map.get($props, "font-size");
+    $gap: map.get($props, "gap");
+    $height: map.get($props, "height");
+    $margin-y: map.get($props, "margin-y");
+    $padding-left: map.get($props, "padding-left");
+    $padding-right: map.get($props, "padding-right");
 
     @include map-props-mixin(
-      map-get($component-gap-sizing, $gap));
-
+      map.get($component-font-sizing, $font-size));
     @include map-props-mixin(
-      map-get($component-height-sizing, $height));
-
+      map.get($component-gap-sizing, $gap));
     @include map-props-mixin(
-      map-get($component-margin-y-sizing, $margin-y));
-
+      map.get($component-height-sizing, $height));
     @include map-props-mixin(
-      map-get($component-padding-left-sizing, $padding-left));
-
+      map.get($component-margin-y-sizing, $margin-y));
     @include map-props-mixin(
-      map-get($component-padding-right-sizing, $padding-right));
+      map.get($component-padding-left-sizing, $padding-left));
+    @include map-props-mixin(
+      map.get($component-padding-right-sizing, $padding-right));
   }
 }
 
