--- a/src/scss/components/menu/_variables.scss
+++ b/src/scss/components/menu/_variables.scss
@@ -1,5 +1,4 @@
 $menu-bg: var(--color-bg-dk);
-
 $menu-widths: ("128", "256") !default;
 
 // Children
@@ -15,11 +14,9 @@ $menu-title-sizes: (
 // -- Menu Item
 
 $menu-item-transition-duration: var(--transition-duration-fast) !default;
-
 $menu-item-sizes: (
   "base": (
     "font-size": "sm", "gap": "8", "height": "40", "margin-y": "4", "padding-left": "24", "padding-right": "16"
   )
 ) !default;
-
-$menu-item-types: ("solid", 'subtle', "ghost") !default;
+$menu-item-patterns: ("solid", "subtle", "ghost") !default;
