--- a/src/scss/components/badge/_variables.scss
+++ b/src/scss/components/badge/_variables.scss
@@ -1,9 +1,7 @@
 $badge-border-width: var(--component-border-width-base) !default;
-
 $badge-placements: (
-  'top-left', 'top-right', 'bottom-left', 'bottom-right'
+  "top-left", "top-right", "bottom-left", "bottom-right"
 ) !default;
-
 $badge-sizes: (
   "xs": (
     "font-size": "xxs", "gap": "4", "height": "16", "min-width": "16", "padding-x": "4"
@@ -15,6 +13,4 @@ $badge-sizes: (
     "font-size": "sm",  "gap": "8", "height": "32", "min-width": "32", "padding-x": "12"
   )
 ) !default;
-
-$badge-types: ("solid", "subtle") !default;
-
+$badge-patterns: ("solid", "subtle") !default;
