--- a/src/scss/components/dot/_mixins.scss
+++ b/src/scss/components/dot/_mixins.scss
@@ -1,9 +1,9 @@
-@mixin dot-pattern-mixin($color, $type) {
-  @if ($type == 'solid') {
-    @include dot-solid-mixin($color);
+@mixin dot-pattern-mixin($pattern) {
+  @if $pattern == "solid" {
+    @include dot-solid-mixin;
   }
 }
 
-@mixin dot-solid-mixin($name) {
-  @include component-solid-mixin($name);
+@mixin dot-solid-mixin {
+  @include component-solid-mixin;
 }
