--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -1,15 +1,17 @@
 @import "layout";
-
 @import "alert";
+
 // @import "article";
 @import "avatar";
 @import "badge";
 @import "button";
 @import "close";
+@import "container";
 @import "dot";
 @import "divider";
 @import "icon";
 @import "menu";
+
 // @import "form";
 // @import "form-control";
 // @import "input-group";
