--- a/src/scss/mixins/_breakpoints.scss
+++ b/src/scss/mixins/_breakpoints.scss
@@ -1,15 +1,20 @@
+@use "sass:map";
+
 @function breakpoint-min($name, $breakpoints: $breakpoints-map) {
-  $min: map-get($breakpoints, $name);
+  $min: map.get($breakpoints, $name);
+
   @return if($min != 0, $min, null);
 }
 
 @function breakpoint-max($name, $breakpoints: $breakpoints-map) {
-  $max: map-get($breakpoints, $name);
+  $max: map.get($breakpoints, $name);
+
   @return if($max and $max > 0, $max - 0.02, null);
 }
 
 @mixin media-breakpoint-up($name, $breakpoints: $breakpoints-map) {
   $min: breakpoint-min($name, $breakpoints);
+
   @if $min {
     @media (min-width: $min) {
       @content;
@@ -21,6 +26,7 @@
 
 @mixin media-breakpoint-down($name, $breakpoints: $breakpoints-map) {
   $max: breakpoint-max($name, $breakpoints);
+
   @if $max {
     @media (max-width: $max) {
       @content;
