--- a/src/scss/variables/_spacing.scss
+++ b/src/scss/variables/_spacing.scss
@@ -1,20 +1,17 @@
 $space-base: 1rem !default;
-
-$space-4  : $space-base * .25;
-$space-8  : $space-base * .5;
-$space-12 : $space-base * .75;
-$space-16 : $space-base;
-$space-20 : $space-base * 1.25;
-$space-24 : $space-base * 1.5;
-$space-32 : $space-base * 2;
-
-$spaces:
-(
-  '4' : $space-4,
-  '8' : $space-8,
-  '12': $space-12,
-  '16': $space-16,
-  '20': $space-20,
-  '24': $space-24,
-  '32': $space-32
+$space-4: $space-base * 0.25;
+$space-8: $space-base * 0.5;
+$space-12: $space-base * 0.75;
+$space-16: $space-base;
+$space-20: $space-base * 1.25;
+$space-24: $space-base * 1.5;
+$space-32: $space-base * 2;
+$spaces: (
+  "4" : $space-4,
+  "8" : $space-8,
+  "12": $space-12,
+  "16": $space-16,
+  "20": $space-20,
+  "24": $space-24,
+  "32": $space-32
 );
